@@ -6,27 +6,29 @@ DIST grsecurity-sources-extras-4.9.48.tar.xz 2542704 SHA256 549446a91147d676debb
 DIST grsecurity-sources-extras-4.9.49.tar.xz 2549128 SHA256 638243a89873b9152780f5d91c6912c6f69e9c4725dd9ac65d6c4c69b63f2877 SHA512 c89bd0a2ae3fbdf066beff9b11ee69486c1f8bcf062b615478d019797ad1aa0199bec1455b689d4852b13d0ec36a19363fa0f1d307a9f2309ddb6b420951f805 WHIRLPOOL 2e5e1e615cdea48fca80f50717a537e457b859781229a4494971110fdf500e1860ca3f82f802e8623f4c8e6f2ff715a682d4bacb95f24dd587c5d8d2a057d26b
 DIST grsecurity-sources-extras-4.9.50.tar.xz 2554316 SHA256 6ea9deae6705f6ba6349a28be3c2477f9f1d490bdfa4f6952f05793a55d172fa SHA512 8e92c7a444abcd4dd14659e3f2dbf864d2dd9a02aa90fd2ccc0bcdfafa9c38a1a66e200c23e7639ec55b295854c683f075655833c83068e03f0f5e88aa70d56e WHIRLPOOL d5d1a99353c09fc1d9497863a568e85defc165cf03f0b4e5829ca190ab84dfeb1b54ea9bb1b722c0f6daa79980b14b4a4c81a623a62d860920df93935ad7986b
 DIST grsecurity-sources-extras-4.9.51.tar.xz 2581044 SHA256 921c41a8577585b21baa3ec5417762c8a211adfc9fe6fa3ac44ce61a0cf55c21 SHA512 a449ca01079f64588ffb7ab2a0880839e8b2165bb8360c4e07ed5985ba2dd5eac5db5a7f6c8bae0e88771a4fc248f11289a4376f32c6420198d9209838d3d13c WHIRLPOOL befab3d1aa291d7244845114d893093f41a15d69586f96af25ffd0812ea9d4109e49c0b3ae8f2f036a452e008a79fa9f6874cbe7192223b9895ff4f840a71295
+DIST grsecurity-sources-extras-4.9.52.tar.xz 2602456 SHA256 5b8074d5bfc88f5aee8614357226d563860a575ba4b8c918d74b95a2f0ceafff SHA512 e77fe1dbeb7eb3d3f8e94a17500b1270ec8db465b8425437459eca37a8e5d154832675580102934d0d8a1a6b5dba643c5c03e9a3c3bd2673a8bc25a88d8e64ad WHIRLPOOL b3be8b0200a7ad68200b101d2613644ad088710e30b3c7403f910050b9a603abcab877d2b38db4bc349eea93b6a1ac84eeef9bfdcdd6835b4ce12bc6d785168b
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.49.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.50.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.51.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 1141 SHA256 300bbfc408a8f305bebef9b7648f65353c9bca1b62219bdc2d654f39d4ca48b6 SHA512 92e7b9f94cdd9ad417c50e24086fc3eee7321f9ac453022fefab00c7aaa8010422765517aec0a1edda225459f620bdde794d055ac7749ab19ef9a42fcd6aebfb WHIRLPOOL 1562ab2c9a4c34a5bd5bde29ecefb8fa07eb2e942aa9ddf55a81f462e737626994196106c8855f0bf5f2bb8b951545871af4125fbfda550b40792e3dd6ca6145
+EBUILD grsecurity-sources-4.9.52.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 1336 SHA256 99a32bb62610883348c20b716050ed803f97865430d9ef983b0431d29a327ec6 SHA512 78be8f2c27f3c0dac40b536ed8e01df86f4d1bc0c41a6c0313618fb41aa0d420c401ee65d8855116b5182c9a5e1eabbc322553c8b7fd8a33f0053d53da3b8f5e WHIRLPOOL 6f52084d0723a545388b3447b7529aefab1a893d8c0fe66ea0070d7840ae0486a9fb1fa84ccdfa242460882f80e856b82b6b4d0c28fc579dc4acf61b0ca8342b
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnDj+YACgkQunvTUHGU
-RZ/XUQ/+Mo7e1J5m0htG4vRJiKDOHMCFINQuus9wwB0C/3fwPtn8Ai9aVzft9Fd5
-+ArhIlSxLniVRaQS1m3dVr+6iB9jw9/kH1MD0hLhDdhBraKptDxNgzXTmD7tZtX4
-qac3CyGnsY+MotDAOcrdHhyI9JWXZTgA2gWqTBAIYHKqZvu+ulLP5xxychtkZVwc
-ZRW8m4vRjQPzvBL6+QIEb2nLxpEzJ3rNrK+FqWAP76D0Ozr5d1vdTFGT1sv5mfZ+
-fsTUmM2nKlzh1Y8bYradx19zTAsaBbuU/b34jHNDJ4O/AvHuDnITvniuO8MTYLj6
-MIGUA1/KpAHd9f1hBYT6bwa/Sf3oG1tr1U8RehSm0FOKU1MQCQtWFPQjUoyOkV/2
-uGDiXvhjxWfRvIqlezITHyTIeZpGoZ8wyX7SKnwwiYWTwZxXTMpZK1zHuKdcOCu0
-m13f7cKHL9mbKauEykf5nLdGUUTuFN0EQ6g5JsOYUhqFCFh2JDJh1fSUpLgoQzGa
-oOJZB5rWlfmqJVQaJ6Ptb7+WKwIromapiHJcrFBrfwv8iFD67IESSyUB+gp2ZGJ6
-VVkTYMajr5xncRHEhf/n5Y5XO8vIfAN7aSFNs1I5VMIbGkm55d/O9fpEu+s+hAIl
-x43C8bfXVFTdJnqWNcYCHfDiL9Nu24dEpaHoE3vPZVpRPe6goUk=
-=WmY6
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnPa30ACgkQunvTUHGU
+RZ/lLg/7BTZBQV0tK44Eeera63ReMS3J5n7CiTPAmv0SkFN7gBZ380vd6nMhFwyu
+YKnfatmvhntnfOGCx9sNFfpoKndQPcsU3oE42OQJLq2z3hGSxqse4Cf82ovWCVmY
+36N0304SblXRq2C64zwR9HqxAURu2nVxiPi8fq+2LntdmPPjken/e9OZms5Bk3Az
+TGhqxlwaDfzXQuzxdT0psbE2afY8vqcDh/lDnEpkqrpJpmREe1Z+BJk4SknChVBU
+/oqmV+EoqnB+hKjZ5p5HcfpAKBJG0YGtUXIEl6hvbT0DABYy61FGE7clrUz6lW+N
+m550XVvLIDc7i/dH8DmcrLJ2IQtS/auny6qu/HJfdaX6UHB7lN/R5WQ1IfxUTigE
+4Bk/h+b2UfRoLiPsCKOZvb8ugUk26yCdj2LN1hlZ/XiFFYb3a7AOe8QSeC7gB/VL
+S+no6BdfMd5jwx5+10JjkXvKEVYbJSGOeNG+5V5dagR5qwpvgQCxGFcNRJsLMlEw
+R2PtpjKQoY+VBotYN+t4/NuNvfNTsYv81M4Qq4/iUiHnhBF98eHMWOaTFl1C9xO6
+y8Vuov+pyg+odYp5a9rQVnR5q0WY6ZSWrK1h9C0kDOIdLokGwTwH/48GBzFx0fEI
+AvoLwxyuuO4Ulhj9IL/BMyUWx3cIWeQIsB0R6bCZzCCj7pka4/g=
+=Bh9A
 -----END PGP SIGNATURE-----
