@@ -1,3 +1,9 @@
+*grsecurity-sources-4.9.52 (30 Sep 2017)
+
+  30 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
+  +grsecurity-sources-4.9.52.ebuild:
+  sys-kernel/grsecurity-sources: Automated version bump to 4.9.52
+
 *grsecurity-sources-4.9.51 (21 Sep 2017)
 
   21 Sep 2017; Agostino Sarubbo <ago@gentoo.org>
